--- a/distribution/docs/src/main/resources/content/_developing/_devComponents/custom-sources.adoc
+++ b/distribution/docs/src/main/resources/content/_developing/_devComponents/custom-sources.adoc
@@ -69,7 +69,7 @@ The `factory-pid` property of the metatype must contain one of the following in 
 
 [NOTE]
 ====
-Remote sources currently extend the `ResourceReader` interface. However, a `RemoteSource` is not treated as a `ResourceReader`. The `getSupportedSchemes()` method should never be called on a `RemoteSource`, thus the suggested implementation for a `RemoteSource` is to return an empty set. The `retrieveResource( …​ )` and `getOptions( …​ )` methods will be called and MUST be properly implemented by a `RemoteSource`.
+Remote sources currently extend the `ResourceReader` interface. However, a `RemoteSource` is not treated as a `ResourceReader`. The `getSupportedSchemes()` method should never be called on a `RemoteSource`, thus the suggested implementation for a `RemoteSource` is to return an empty set. The `retrieveResource( … )` and `getOptions( … )` methods are called and MUST be properly implemented by a `RemoteSource`.
 ====
 
 === Developing Catalog Providers
